flexoffice/backend/office-booking/office-booking-middle.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: flex-office-booking
spec:
  redirectScheme:
    scheme: https
    permanent: true
