flexoffice/backend/office-booking/office-booking-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flex-postgres-office-booking
  namespace: flex-office-booking
spec:
  selector:
    app: flex-postgres-office-booking
  type: ClusterIP
  ports:
    - name: http
      port: 5432
