flexoffice/backend/office-booking/parking-space-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flex-postgres-parking-space
  namespace: flex-parking-space
spec:
  selector:
    app: flex-postgres-parking-space
  type: ClusterIP
  ports:
    - name: http
      port: 5432
