flexoffice/backend/office-booking/office-booking-database-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flex-office-booking-database-http
  namespace: flex-office-booking
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  rules:
    - host: "db-office.flex.tschumi.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flex-office-booking-database
                port:
                  number: 5432
