flexoffice/backend/office-booking/office-booking-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flex-office-booking-https
  namespace: flex-office-booking
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
  - host: "api.flex.tschumi.me"
    http:
      paths:
      - path: /office-booking
        pathType: Prefix
        backend:
          service:
            name: flex-office-booking
            port:
              number: 8082
  tls:
  - hosts:
    - "api.flex.tschumi.me"
    secretName: flex-office-booking
