flexoffice/backend/office-booking/parking-space-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flex-parking-space-https
  namespace: flex-parking-space
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
  - host: "api.flex.tschumi.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parking-space
            port:
              number: 8082
  tls:
  - hosts:
    - "api.flex.tschumi.me"
    secretName: flex-parking-space
